--- a/index-2.html
+++ b/index-2.html
@@ -176,18 +176,18 @@
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">Email address</label>
                             <input type="email" class="form-control" id="exampleFormControlInput1"
-                                    placeholder="name@example.com">
+                                    placeholder="name@example.com" required>
                         </div>
                         <div class="mb-3">
                             <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" required></textarea>
                         </div>
                     </form>
                     <!-- form end -->
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" style="background-color: #A40022"> Send
+                    <button type="submit" onclick="submit_val(this)" class="btn btn-primary msg" style="background-color: #A40022"> Send
                             Message</button>
                 </div>
             </div>
@@ -200,6 +200,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+    <script>
+        function submit_val(tag){
+            tag.innerHTML= "<i class='fa fa-check tick' style='color:white;text-shadow:white;background-color:#A40022'></i>";
+        }
+    </script>   
+    
 </body>
 
 </html>
