form validation and background left

--- a/index-2.html
+++ b/index-2.html
@@ -73,7 +73,7 @@
             <div class=".container-fluid  px-3">
                 <ul class="nav nav-pills">
                     <li class="nav-item nav-style px-3">
-                        <a class="nav-link nav-style px-3 hoveffect rounded" href="#Aboutme">About me</a>
+                        <a class="nav-link nav-style px-3 hoveffect rounded" href="#about">About me</a>
                     </li>
                     <li class="nav-item nav-style px-3">
                         <a class="nav-link nav-style px-3 hoveffect rounded" href="#Education">Education</a>
@@ -94,10 +94,10 @@
             </div>
         </nav>
         <!-- navbar ends -->
-    </div>
+    </div> 
     <!-- end name header -->
     <!-- social sidebar -->
-    <div class="icon-bar p-1">
+    <div class="icon-bar p-1" style="z-index: 1;">
         <a href="www.linkedin.com/in/jyosna-philip" class="rounded-circle"><i class="fa-brands fa-linkedin-in "
                 style="color: #ffffff;"></i>
         <a href="https://github.com/jyosnaphilip" class="rounded-circle"><i class="fa-brands fa-github "
@@ -118,10 +118,10 @@
 
         <div class="container-fluid text-center mt-0" style="background-color:#c3b3e3;">
             <!-- first row start -->
-            <div class="row shadow-sm" style="background-color:#c3b3e3;">
+            <div class="row shadow-sm"  style="background-color:#c3b3e3;">
 
-                <div class="col-sm-7 p-4 offset-sm-1 text-light fw-light" id="Aboutme">
-                    <h4  class="py-5  fw-bold">About Me</h4>
+                <div class="col-sm-7 p-4 offset-sm-1 text-light fw-light" >
+                    <h4  class="py-5  fw-bold" id="about">About Me</h4>
                     <div class="t-font">
                         <p>Hello there! I'm a Data Science enthusiast currently pursuing my studies at Christ University,
                         Lavasa, Pune.
