--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <img src="name_photo.png" href="jyosna" id="name_pic">
                         <div id="designatn mt-3">
                             <p class="text-light fw-bold h">Data Science Aspirant</p>
-                            <a href="#" class="btn text-light btn-outline-secondary btn-lg border resume rounded-pill"
+                            <a href="Resume-Jyosna.pdf" class="btn text-light btn-outline-secondary btn-lg border resume rounded-pill"
                                 style="font-family: Ubuntu, sans-serif; font-size:medium;">
                                 Download Resume</a>
                             
@@ -282,7 +282,7 @@
                 <!-- projects section -->
                 <div style="background-color: #c3b3e3;z-index:-1;border:none;" class="row pt-5 align-items-center offset-sm-1 mt-3 ">
                     <div><h4 class="text-center" id="Projects" style="text-align: centre;z-index: -1;">Projects and Certifications</h4></div>
-                    <div class="card me-5 shadow-lg " style="background-color:#c3b3e3;;z-index:0;width:fit-content;">
+                    <div class="card me-5 shadow-lg " style="background-color:#c3b3e3;border:none;z-index:0;width:fit-content;">
                         <div class="row g-0 w-75 ">                 
                             <div class="col-sm-4 p-0">
                                 <img src="WhatsApp Image 2023-10-25 at 7.07.57 PM.jpeg" class="img-fluid img-thumbnail shadow-md w-75" >
