grammatical errors in about me

--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
                             <p>I find joy in navigating the complexities of logic at the intersection of mathematics and
                             analytics.
                             My focus revolves around programming and any technology involving data,
-                            showcased by the development of this portfolio as part of my Full-stack Web Development Course.
+                            showcased by the development of this portfolio as part of my Full Stack Web Development Course.
                             While algorithms and datasets drive my professional pursuits, I also relish the simple joys of
                             life.
-                            You can find me snuggled up up with a good book, when I'm not buried in datasets.</p>
+                            When I'm not buried in datasets, you can find me snuggled up up with a good book.</p>
                             <p>I'm actively seeking my first opportunity to apply the skills I've developed as well as enhancing them.
-                            I'm ready to contribute to projects that harness data for meaningful outcomes and make meaningful strides in this field
+                            I'm ready to contribute to projects that harness data for meaningful outcomes.
 
                             If you're looking for a professional who seamlessly blends technical skills with a steadfast
                             passion
