--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <img src="name_photo.png" href="jyosna" id="name_pic">
                         <div id="designatn mt-3">
                             <p class="text-light fw-bold h">Data Science Aspirant</p>
-                            <a href="Resume-Jyosna.pdf" target="_blank"
+                            <a href="resume_jyosna.pdf" target="_blank"
                              class="btn text-light btn-outline-secondary btn-lg border resume rounded-pill"
                                 style="font-family: Ubuntu, sans-serif; font-size:medium;">
                                 Download Resume</a>
