html versions, java bar

--- a/index.html
+++ b/index.html
@@ -347,9 +347,9 @@
                     </div>
                     <div class="row">
                         <div class="col-7 offset-3">
-                            <div class="card align-items-center shadow-lg card-body" style="background-color:#c3b3e3;width:90%;height:fit-content;border:none;">
-                                <div data-iframe-width="200" data-iframe-height="270" data-share-badge-id="d53a79aa-3cc1-430c-a9ba-ad493b2c53a0" data-share-badge-host="https://www.credly.com"></div>
-                                <div data-iframe-width="200" data-iframe-height="270" data-share-badge-id="442eadeb-be94-48fc-95c5-185b707ee933" data-share-badge-host="https://www.credly.com"></div>
+                            <div class="card align-items-center shadow-lg card-body" style="background-color:#c3b3e3;width:90%;border:none;">
+                                <div data-iframe-width="250" data-iframe-height="270" data-share-badge-id="d53a79aa-3cc1-430c-a9ba-ad493b2c53a0" data-share-badge-host="https://www.credly.com"></div>
+                                <div data-iframe-width="250" data-iframe-height="270" data-share-badge-id="442eadeb-be94-48fc-95c5-185b707ee933" data-share-badge-host="https://www.credly.com"></div>
     
                                 <div data-iframe-width="200" data-iframe-height="270" data-share-badge-id="6c2969ab-c699-4424-968c-9cbbad51dc1e" data-share-badge-host="https://www.credly.com"></div>
                             </div>
