--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
                             <div class="progress-bar skill" role="progressbar" style="width: 15%" aria-valuenow="40"
                                 aria-valuemin="0" aria-valuemax="100"></div>
                         </div></br>
-                        <p class="pt-1 fw-bold t-font">C</p>
+                        <p class="pt-1 fw-bold t-font">SQL</p>
                         <div class="progress" id="Skills">
-                            <div class="progress-bar skill" role="progressbar" style="width: 10%" aria-valuenow="50"
+                            <div class="progress-bar skill" role="progressbar" style="width: 60%" aria-valuenow="50"
                                 aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
