django desc change

--- a/blog.html
+++ b/blog.html
@@ -188,7 +188,7 @@
             <div class="col-sm-3 p-5">
                 <div class="card" style="width: 25rem;">
                     <div class="card-body">
-                      <p class="card-text">States/UTs with the lowest production of renewable 
+a                      <p class="card-text">States/UTs with the lowest production of renewable 
                         energy can be seen in this plot. A large number of these are relatively 
                         small in terms of their size, which could be the reason for less production.
                     </p>
