--- a/index.html
+++ b/index.html
@@ -377,10 +377,9 @@
                                         </div>
                                         <div class="col-sm-5 align-self-centre">
                                             <div class="card-body p-5" >
-                                                <p class="card-text align-self-centre" >This project is a Python-based customer management system
-                                                that provides functionalities for creating new customer accounts, editing customer details, 
-                                                checking loan eligibility, and handling foreign exchange (forex) transactions. 
-                                                The system also includes an age analysis feature for customer demographics.<br>
+                                                <p class="card-text align-self-centre" >We created a Django full stack web app where students view menu of the various canteens catering to them in their university.
+                                                    Separate modules for vendor interface and admins were also created. Each type of user is provided with detailed analysis of the data that they generate.
+                                                    <br>
                                                 <strong>Techniques used:</strong>Django, Full Stack Web Development, ER Diagram, Database Creation, Data Analysis
 
                                             </div>
