azure site added

--- a/index.html
+++ b/index.html
@@ -460,9 +460,9 @@
                                             </div>
                                             <div class="col-sm-3 align-self-centre">
                                                 <p class="card-text"><a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" style="color:#702670;font-weight:bold;" href="https://github.com/sekhrianchal6/Predictive-Maintenance" target="_blank">Click here for project repository</a></p>    
-                                                <!-- <p class="card-text"><a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" style="color:#702670;font-weight:bold;" href="" target="_blank">View Dataset Source</a></p> 
-                                                <p class="card-text"><a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" style="color:#702670;font-weight:bold;" href="" target="_blank">View Documentation</a></p>
-                                                <p class="card-text"><a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" style="color:#702670;font-weight:bold;" href="" target="_blank">View deployed model</a></p> -->
+                                                <!-- <p class="card-text"><a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" style="color:#702670;font-weight:bold;" href="" target="_blank">View Dataset Source</a></p> -->
+                                                <p class="card-text"><a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" style="color:#702670;font-weight:bold;" href="Remaining Useful Life Estimation for Predictive Maintenance Applications.pdf" target="_blank">View Documentation</a></p>
+                                                <p class="card-text"><a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" style="color:#702670;font-weight:bold;" href="https://predictivemaintenance30daysml.azurewebsites.net/" target="_blank">View deployed model</a></p> 
                                             </div>
                                         </div>                                   
                                     </div>
