--- a/index.html
+++ b/index.html
@@ -481,7 +481,35 @@
                 
             </div>   <!--end container-->
             <div style="background-color: #c3b3e3;z-index:-1;border:none;" class="row m-5 align-items-center offset-sm-1 mt-3 ">
-                
+             <div id="cert"><h4 class="text-center"  style="text-align: centre;z-index: -1;">Certification</h4></div>
+                    <br>
+                    <div class="accordion mx-6" id="accordionPanelsStayOpenExample" >
+                        <div class="accordion-item">
+                          <h2 class="accordion-header">
+                            <button class="accordion-button" style="background-color:#702670;z-index:0; color: #fff;font-weight: 600;" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                                Microsoft Certified: Azure Data Fundamentals
+                            </button>
+                          </h2>
+                            <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
+                                <div class="accordion-body">
+                                    <div class="row g-0 ">                 
+                                        <div class="col-sm-3 p-0">
+                                        <img src="microsoft-certified-fundamentals-badge.svg" class="img-fluid img-thumbnail shadow-md w-75" >
+                                        </div>
+                                        <div class="col-sm-5 align-self-centre">
+                                            <div class="card-body p-5" >
+                                            <p class="card-text align-self-centre" >
+                                                <br><a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover link-underline-light-hover" style="color:#702670;font-weight:bold;" href="https://learn.microsoft.com/en-us/users/jyosnaphilip-8529/credentials/18473abdbed34988" target="_blank"> Click to see Credential</a></p>
+
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-3 align-self-centre">
+                                            <!-- <br><a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover link-underline-light-hover" style="color:#702670;font-weight:bold;" href="" target="_blank"> View Insight Dashboard</a></p> -->
+
+                                        </div>
+                                    </div>              
+                                </div>
+                            </div>
             </div>
         </div>  
 
